--- a/src/main/resources/templates/Login.html
+++ b/src/main/resources/templates/Login.html
@@ -47,16 +47,16 @@ button.onclick = function () {
     xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
     xhr.onload = function() {
     	if (xhr.status === 200) {
-            var result = document.getElementById('result');
-            result.innerHTML = xhr.responseText;
+    		div.appendChild(p);
+    		p.innerHTML = xhr.responseText;
+    		if (xhr.responseText == "") {
+    			window.location.assign("/timeLine"); }
         } else if (xhr.status !== 200) {
             alert('Request failed.  Returned status of ' + xhr.status);
         }
     };
     var body = 'username=' + encodeURIComponent(username) + '&password1=' + encodeURIComponent(password1);
     console.log(body);
-        	div.appendChild(p);
-    		p.innerHTML = "Username or Password not valid.";
     xhr.send(body);
 };
 </script>
