fixed login error

--- a/src/main/resources/templates/Login.html
+++ b/src/main/resources/templates/Login.html
@@ -23,6 +23,9 @@
       <button id="submit_button"> Submit </button>
       <!-- <input type="checkbox" checked="checked"> Remember me -->
     </div>
+    <div>
+    <p>Not registered? Click <a href="/register">here</a> to register.</p>
+    </div>
     <div id="msg">
 
     </div>
