fixed insert tweet to log user_id, added session information, added a utilities class

--- a/src/main/resources/templates/Register.html
+++ b/src/main/resources/templates/Register.html
@@ -64,7 +64,7 @@ button.onclick = function () {
 	var password2 = password2ID.value;
 	
     var xhr = new XMLHttpRequest();
-    xhr.open('POST', '/test');
+    xhr.open('POST', '/register_submit');
     xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
     xhr.onload = function() {
     	if (password1 !== password2){
