--- a/src/main/resources/templates/Tweet.html
+++ b/src/main/resources/templates/Tweet.html
@@ -18,7 +18,9 @@
       <br>
       <button id="submit_button"> Tweet </button>
     </div>
-  
+    <div>
+      <p>Click <a href="/timeLine">here</a> to go to timeline</p>
+    </div>
   <div id="msg"></div>
   </div>
 
