--- a/src/main/resources/templates/Login.html
+++ b/src/main/resources/templates/Login.html
@@ -46,14 +46,14 @@ button.onclick = function () {
 	var password1 = password1ID.value;
 
     var xhr = new XMLHttpRequest();
-    xhr.open('POST', '/test2');
+    xhr.open('POST', '/login_submit');
     xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
     xhr.onload = function() {
     	if (xhr.status === 200) {
     		div.appendChild(p);
     		p.innerHTML = xhr.responseText;
     		if (xhr.responseText == "") {
-    			window.location.assign("/timeLine"); }
+    			window.location.assign("/tweet"); }
         } else if (xhr.status !== 200) {
             alert('Request failed.  Returned status of ' + xhr.status);
         }
