updated user timeline to now show tweets from user session id instead of hard coded id

--- a/src/main/resources/templates/Tweet.html
+++ b/src/main/resources/templates/Tweet.html
@@ -19,7 +19,10 @@
       <button id="submit_button"> Tweet </button>
     </div>
     <div>
-      <p>Click <a href="/timeLine">here</a> to go to timeline</p>
+      <p>Click <a href="/timeLine">here</a> to go to Public timeline</p>
+    </div>
+    <div>
+      <p>Click <a href="/user">here</a> to go to User timeline</p>
     </div>
   <div id="msg"></div>
   </div>
