added follow page and some follow logic

--- a/src/main/resources/templates/Tweet.html
+++ b/src/main/resources/templates/Tweet.html
@@ -24,6 +24,9 @@
     <div>
       <p>Click <a href="/user">here</a> to go to User timeline</p>
     </div>
+    <div>
+      <p>Click <a href="/follow">here</a> to go to Follow Page</p>
+    </div>    
   <div id="msg"></div>
   </div>
 
