--- a/src/main/resources/templates/Tweet.html
+++ b/src/main/resources/templates/Tweet.html
@@ -5,8 +5,9 @@
 </head>
 <body>
   <h1>
-    Tweet
+    Welcome, {{username}}!
   </h1>
+  <h2>Tweet</h2>
 <div>
 
     <div class="container">
@@ -22,7 +23,7 @@
       <p>Click <a href="/timeLine">here</a> to go to Public timeline</p>
     </div>
     <div>
-      <p>Click <a href="/user">here</a> to go to User timeline</p>
+      <p>Click <a href="/user/{{username}}">here</a> to go to User timeline</p>
     </div>
     <div>
       <p>Click <a href="/follow">here</a> to go to Follow Page</p>
