--- a/src/main/resources/templates/Login.html
+++ b/src/main/resources/templates/Login.html
@@ -53,7 +53,7 @@ button.onclick = function () {
     		div.appendChild(p);
     		p.innerHTML = xhr.responseText;
     		if (xhr.responseText == "") {
-    			window.location.assign("/tweet/"+username); }
+    			window.location.assign("/timeLine"); }
         } else if (xhr.status !== 200) {
             alert('Request failed.  Returned status of ' + xhr.status);
         }
