--- a/src/main/resources/templates/Follow.html
+++ b/src/main/resources/templates/Follow.html
@@ -7,6 +7,7 @@
 		<h1>
     		Follow
   		</h1>
+  		<h4>{{link1}}&emsp;{{link2}}&emsp;{{link3}}&emsp;{{link4}}</h4>
   		
   		<div class="container">
 	      <label><b>Search</b></label>
