--- a/src/main/resources/templates/Tweet.html
+++ b/src/main/resources/templates/Tweet.html
@@ -7,7 +7,8 @@
   <h1>
     Welcome, {{username}}!
   </h1>
-  <h2>Tweet</h2>
+  <h4>{{link1}}&emsp;{{link2}}&emsp;{{link3}}&emsp;{{link4}}</h4>
+    <h2>Tweet</h2>
 <div>
 
     <div class="container">
@@ -18,16 +19,7 @@
     <div>
       <br>
       <button id="submit_button"> Tweet </button>
-    </div>
-    <div>
-      <p>Click <a href="/timeLine">here</a> to go to Public timeline</p>
-    </div>
-    <div>
-      <p>Click <a href="/user/{{username}}">here</a> to go to User timeline</p>
-    </div>
-    <div>
-      <p>Click <a href="/follow">here</a> to go to Follow Page</p>
-    </div>    
+    </div>  
   <div id="msg"></div>
   </div>
 
