Wed morning updates

--- a/src/main/resources/templates/Follow.html
+++ b/src/main/resources/templates/Follow.html
@@ -17,7 +17,7 @@
 	    <div id="users">
 		{% for id in followlist %}
 		<div>
-		    <ul id="myUL">
+		    <ul style="list-style: none;" id="myUL">
 		        <li>{{id}}</li>
 		    </ul>
 		</div>
