--- a/src/main/resources/templates/Register.html
+++ b/src/main/resources/templates/Register.html
@@ -35,7 +35,7 @@
     </div>
 
     <div>
-      <button id="submit_button"> Submit </button>
+      <button id="submit_button"> Register </button>
       <!-- <input type="checkbox" checked="checked"> Remember me -->
     </div>
     <div id="msg">
