--- a/src/main/resources/templates/Tweet.html
+++ b/src/main/resources/templates/Tweet.html
@@ -5,10 +5,9 @@
 </head>
 <body>
   <h1>
-    Welcome, {{username}}!
+    Tweet
   </h1>
   <h4>{{link1}}&emsp;{{link2}}&emsp;{{link3}}&emsp;{{link4}}</h4>
-    <h2>Tweet</h2>
 <div>
 
     <div class="container">
