--- a/src/main/resources/templates/Login.html
+++ b/src/main/resources/templates/Login.html
@@ -20,7 +20,7 @@
     </div>
 
     <div>
-      <button id="submit_button"> Submit </button>
+      <button id="submit_button"> Login </button>
       <!-- <input type="checkbox" checked="checked"> Remember me -->
     </div>
     <div>
