--- a/src/main/resources/templates/Register.html
+++ b/src/main/resources/templates/Register.html
@@ -38,6 +38,9 @@
       <button id="submit_button"> Register </button>
       <!-- <input type="checkbox" checked="checked"> Remember me -->
     </div>
+    <div>
+    <p>Already registered? Click <a href="/login">here</a> to login.</p>
+    </div>
     <div id="msg">
 
     </div>
