fixed timeline issue and updated our input forms to use tables

--- a/src/main/resources/templates/Login.html
+++ b/src/main/resources/templates/Login.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title></title>
+<!--    <link rel="stylesheet" type="text/css" href="styles.css">  -->
 </head>
 <body>
   <h1>
@@ -10,15 +10,16 @@
 
   <div>
 
-    <div class="container">
-      <label><b>Username</b></label>
-      <input type="text"  id="username" >
-    </div>
-
-    <div class="container">
-      <label><b>Password</b></label>
-      <input type="password"  id="psw1" >
-    </div>
+  <table>
+    <tr>
+      <td align="right"><b>Username:</b></td>
+      <td align="left"><input type="text"  id="username" /></td>
+    </tr>
+    <tr>
+      <td align="right"><b>Password:</b></td>
+      <td align="left"><input type="password"  id="psw1" /></td>
+    </tr>
+  </table>
 
     <div>
       <button id="submit_button"> Login </button>
