--- a/src/main/resources/templates/Register.html
+++ b/src/main/resources/templates/Register.html
@@ -9,30 +9,28 @@
   </h1>
   <div>
 
-    <div class="container">
-      <label><b>Username</b></label>
-      <input type="text"  id="username" >
-    </div>
-
-    <div class="container">
-      <label><b>Handle @</b></label>
-      <input type="text" id="handle" >
-    </div>
-
-    <div class="container">
-      <label><b>Displayname</b></label>
-      <input type="text"  id="displayName" >
-    </div>
-
-    <div class="container">
-      <label><b>Password</b></label>
-      <input type="password"  id="psw1" >
-    </div>
-
-    <div class="container">
-      <label><b>Password (repeat)</b></label>
-      <input type="password"  id="psw2" >
-    </div>
+  <table>
+    <tr>
+      <td align="right"><b>Username:</b></td>
+      <td align="left"><input type="text"  id="username" /></td>
+    </tr>
+    <tr>
+      <td align="right"><b>Handle @</b></td>
+      <td align="left"><input type="text"  id="handle" /></td>
+    </tr>
+    <tr>
+      <td align="right"><b>Displayname</b></td>
+      <td align="left"><input type="text"  id="displayName" /></td>
+    </tr>
+     <tr>
+      <td align="right"><b>Password:</b></td>
+      <td align="left"><input type="password"  id="psw1" /></td>
+    </tr>
+     <tr>
+      <td align="right"><b>Password (repeat)</b></td>
+      <td align="left"><input type="password"  id="psw2" /></td>
+    </tr>           
+  </table>
 
     <div>
       <button id="submit_button"> Register </button>
