set cursor location and cleaned up follow js

--- a/src/main/resources/templates/Login.html
+++ b/src/main/resources/templates/Login.html
@@ -38,6 +38,7 @@
 // AJAX posting x-www-form-urlencoded
 var button = document.getElementById('submit_button');
 var usernameID = document.getElementById('username');
+usernameID.focus();
 var password1ID = document.getElementById('psw1');
 
 var p = document.createElement('p');
