--- a/src/main/resources/templates/Register.html
+++ b/src/main/resources/templates/Register.html
@@ -49,6 +49,7 @@
 // AJAX posting x-www-form-urlencoded 
 var button = document.getElementById('submit_button');
 var usernameID = document.getElementById('username');
+usernameID.focus();
 var handleID = document.getElementById('handle');
 var displaynameID = document.getElementById('displayName');
 var password1ID = document.getElementById('psw1');
