updated the headers to include unfollows

--- a/src/main/resources/templates/UnFollow.html
+++ b/src/main/resources/templates/UnFollow.html
@@ -7,7 +7,7 @@
 		<h1>
     		UnFollow
   		</h1>
-  		<h4>{{link1}}&emsp;{{link2}}&emsp;{{link3}}&emsp;{{link4}}</h4>
+  		<h4>{{link1}}&emsp;{{link2}}&emsp;{{link3}}&emsp;{{link4}}&emsp;{{link5}}&emsp;{{link6}}</h4>
   		
   		<div class="container">
 	      <label><b>Search</b></label>
