--- a/src/main/resources/templates/Tweet.html
+++ b/src/main/resources/templates/Tweet.html
@@ -7,7 +7,7 @@
   <h1>
     Tweet
   </h1>
-  <h4>{{link1}}&emsp;{{link2}}&emsp;{{link3}}&emsp;{{link4}}&emsp;{{link5}}</h4>
+  <h4>{{link1}}&emsp;{{link2}}&emsp;{{link3}}&emsp;{{link4}}&emsp;{{link5}}&emsp;{{link6}}</h4>
 <div>
 
     <div class="container">
